--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 colorama==0.4.5
 executing==1.1.0
+html5lib==1.1
 icecream==2.1.3
 idna==3.4
 Pygments==2.13.0
@@ -11,3 +12,4 @@ requests==2.28.1
 six==1.16.0
 soupsieve==2.3.2.post1
 urllib3==1.26.12
+webencodings==0.5.1
