--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,31 @@
 asn1crypto==1.5.1
-asttokens==2.0.8
-async-generator==1.10
-attrs==22.1.0
+asttokens==2.1.0
 beautifulsoup4==4.11.1
+bs4==0.0.1
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
-colorama==0.4.5
+colorama==0.4.6
 cryptography==38.0.3
-exceptiongroup==1.0.0rc9
-executing==1.1.0
+executing==1.2.0
 filelock==3.8.0
-h11==0.14.0
 icecream==2.1.3
 idna==3.4
+install==1.3.5
 lxml==4.9.1
 numpy==1.23.4
 oscrypto==1.3.0
-outcome==1.2.0
 pandas==1.5.1
-psycopg2==2.9.4
 pycparser==2.21
 pycryptodomex==3.15.0
 Pygments==2.13.0
 PyJWT==2.6.0
 pyOpenSSL==22.1.0
-PySocks==1.7.1
 python-dateutil==2.8.2
-python-dotenv==0.21.0
 pytz==2022.6
 requests==2.28.1
-selenium==4.5.0
 six==1.16.0
-sniffio==1.3.0
 snowflake-connector-python==2.8.1
-sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
-tqdm==4.64.1
-trio==0.22.0
-trio-websocket==0.9.2
 typing_extensions==4.4.0
 urllib3==1.26.12
-webdriver-manager==3.8.3
-webencodings==0.5.1
-wsproto==1.2.0
-xlrd==2.0.1
