add SQLAlchemy library
change connection to use SQLAlchemy Engine
remove cursor
remove commit and rollback calls because this version of SQLA does not use them explicitly

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ colorama==0.4.6
 cryptography==38.0.3
 executing==1.2.0
 filelock==3.8.0
+greenlet==2.0.1
 icecream==2.1.3
 idna==3.4
 install==1.3.5
@@ -16,6 +17,7 @@ lxml==4.9.1
 numpy==1.23.4
 oscrypto==1.3.0
 pandas==1.5.1
+pyarrow==8.0.0
 pycparser==2.21
 pycryptodomex==3.15.0
 Pygments==2.13.0
@@ -26,38 +28,9 @@ pytz==2022.6
 requests==2.28.1
 six==1.16.0
 snowflake-connector-python==2.8.1
+snowflake-sqlalchemy==1.4.4
 soupsieve==2.3.2.post1
-typing_extensions==4.4.0
-urllib3==1.26.12
-asn1crypto==1.5.1
-asttokens==2.1.0
-beautifulsoup4==4.11.1
-bs4==0.0.1
-certifi==2022.9.24
-cffi==1.15.1
-charset-normalizer==2.1.1
-colorama==0.4.6
-cryptography==38.0.3
-executing==1.2.0
-filelock==3.8.0
-icecream==2.1.3
-idna==3.4
-install==1.3.5
-lxml==4.9.1
-numpy==1.23.4
-oscrypto==1.3.0
-pandas==1.5.1
-pycparser==2.21
-pycryptodomex==3.15.0
-Pygments==2.13.0
-PyJWT==2.6.0
-pyOpenSSL==22.1.0
-python-dateutil==2.8.2
-pytz==2022.6
-requests==2.28.1
-six==1.16.0
-snowflake-connector-python==2.8.1
-soupsieve==2.3.2.post1
+SQLAlchemy==1.4.44
 typing_extensions==4.4.0
 urllib3==1.26.12
 xlrd==2.0.1
