general update while doing parallelism
handle some issues
update readme
other minor changes

--- a/categories_easy.json
+++ b/categories_easy.json
@@ -1,4 +1,7 @@
 [
-    "automovil/repuestos",
-    "automovil/baterias"
+    "repuestos",
+    "baterias",
+    "neumaticos",
+    "limpieza-y-cuidado", 
+    "refrigerantes-aditivos-y-lubricantes"
 ]
