--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asn1crypto==1.5.1
 asttokens==2.1.0
 beautifulsoup4==4.11.1
+boto3==1.26.43
+botocore==1.29.43
 bs4==0.0.1
 certifi==2022.9.24
 cffi==1.15.1
@@ -13,6 +15,7 @@ greenlet==2.0.1
 icecream==2.1.3
 idna==3.4
 install==1.3.5
+jmespath==1.0.1
 lxml==4.9.1
 numpy==1.23.4
 oscrypto==1.3.0
@@ -25,6 +28,7 @@ pyOpenSSL==22.1.0
 python-dateutil==2.8.2
 pytz==2022.6
 requests==2.28.1
+s3transfer==0.6.0
 six==1.16.0
 snowflake-connector-python==2.8.1
 snowflake-sqlalchemy==1.4.4
