--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ lxml==4.9.1
 numpy==1.23.4
 oscrypto==1.3.0
 pandas==1.5.1
+pyarrow==8.0.0
 pycparser==2.21
 pycryptodomex==3.15.0
 Pygments==2.13.0
