--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ beautifulsoup4==4.11.1
 boto3==1.26.43
 botocore==1.29.43
 bs4==0.0.1
+cachetools==5.2.1
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -11,24 +12,38 @@ colorama==0.4.6
 cryptography==38.0.3
 executing==1.2.0
 filelock==3.8.0
+google-api-core==2.11.0
+google-api-python-client==2.72.0
+google-auth==2.16.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.8.0
+googleapis-common-protos==1.58.0
 greenlet==2.0.1
+httplib2==0.21.0
 icecream==2.1.3
 idna==3.4
 install==1.3.5
 jmespath==1.0.1
 lxml==4.9.1
 numpy==1.23.4
+oauthlib==3.2.2
 oscrypto==1.3.0
 pandas==1.5.1
+protobuf==4.21.12
 pyarrow==8.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 pycryptodomex==3.15.0
 Pygments==2.13.0
 PyJWT==2.6.0
 pyOpenSSL==22.1.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.6
 requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
 s3transfer==0.6.0
 six==1.16.0
 snowflake-connector-python==2.8.1
@@ -36,5 +51,6 @@ snowflake-sqlalchemy==1.4.4
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.44
 typing_extensions==4.4.0
+uritemplate==4.1.1
 urllib3==1.26.12
 xlrd==2.0.1
